# src/api/v1/admin/auth/index.js
@@ -1,0 +1,7 @@
+const router = require('express').Router();
+
+const authController = require('./auth.controller');
+
+router.post('/login', authController.login);
+
+module.exports = router;
